<resources>
    <string name="app_name">Step by step</string>

    <!-- Common -->
    <string name="common_cal">%s калл</string>
    <string name="common_km">%s км</string>
    <string name="common_m">%s м</string>
    <string name="common_km_h">%s км/ч</string>
    <string name="common_tracker">Трекер</string>
    <string name="common_statistics">Статистика</string>
    <string name="common_settings">Настройки</string>
    <string name="common_ok">Понятно</string>
    <string name="common_cancel">Отмена</string>
    <string name="common_zero" translatable="false">0</string>
    <string name="common_format_time" translatable="false">%02d:%02d:%02d</string>

    <!-- Navigation Drawer Description -->
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>

    <!-- Main Activity -->
    <string name="activity_main_menu_item_exit">Выйти</string>
    <string name="activity_main_menu_title">Меню</string>

    <!-- Tracker Fragment -->
    <string name="fragment_tracker_distance_title">Дистанция</string>
    <string name="fragment_tracker_time_title">Время</string>
    <string name="fragment_tracker_speed_title">Скорость</string>
    <string name="fragment_tracker_max_speed_title">Макс. скорость</string>
    <string name="fragment_tracker_average_speed_title">Ср. скорость</string>
    <string name="fragment_tracker_accuracy_title">Точность</string>
    <string name="fragment_tracker_satellites_title">Спутники</string>
    <string name="fragment_tracker_goal_description">Текущая цель</string>
    <string name="fragment_tracker_start_recording_description">Старт</string>
    <string name="fragment_tracker_stop_recording_description">Стоп</string>
    <string name="fragment_tracker_pause_recording_description">Пауза</string>

    <!-- Location Service -->
    <string name="service_location_notification_channel_name">Сервис записи трека</string>
    <string name="service_location_notification_text">Время: --:--:--, Дистанция: - м</string>
    <string name="service_location_notification_record_text">Время: %s, Дистанция: %s</string>

    <string name="service_location_notification_title">Идет запись трека</string>
    <string name="service_location_notification_channel_id">8653320</string>
    <string name="service_location_notification_group">service_location_notification_group</string>

    <!-- Location -->
    <string name="access_fine_location_adapter_turned_off_title">GPS адаптер выключен</string>
    <string name="access_fine_location_permission_title">Требуется разрешение</string>
    <string name="access_fine_location_permission_description">Для записи трека необходимо дать разрешение для приложения на определение местоположения.</string>
    <string name="access_fine_location_adapter_turned_off_description">Пожалуйста, включите позиционирование по GPS в системных настройках для осуществления записи трека по координатным точкам.</string>
</resources>